Fixed the z-index in the footer rocket.

--- a/static/footer.styl
+++ b/static/footer.styl
@@ -92,7 +92,7 @@
   overflow hidden
   position fixed
   width 17px
-  z-index 1000
+  z-index 5000
 
   & b
   & i
